fixed about-footer alignment

--- a/src/styles/layout/_section.scss
+++ b/src/styles/layout/_section.scss
@@ -22,11 +22,12 @@
     }
 
     &__footer {
+      margin-top: 3rem;
       width: 100%;
       display: flex;
       flex-direction: column;
-      justify-content: flex-start;
-      margin-top: 3rem;
+      justify-content: flex-end;
+      flex-grow: 1;
     }
 
     &__icons {
